# HackWestTX-Project

./: marketplace.css  readme.txt  shop.html  structure.html
server/: .gitignore  Cargo.toml
server/src/: entities.rs  error.rs  index.rs  main.rs  market.rs
