[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
env_logger = "0.10.0"
log = "0.4.20"
mongodb = { version = "2.6.1", features = ["log", "rayon"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
